Fix words not breaking onto next line on small screens

--- a/src/components/NewsList/index.css
+++ b/src/components/NewsList/index.css
@@ -9,11 +9,13 @@
 .heading {
     margin: 0;
     line-height: 1.6em;
+    word-break: break-all;
 }
 
 .description {
     margin-top: 15px;
     margin-bottom: 0;
+    word-break: break-all;
 }
 
 .footer {
